# reaper-mcp

./: .gitignore  README.md  pyproject.toml
lua_bridge/: diag_timesig.lua  reaper_mcp_bridge_v2.lua  rmid_lib.lua
reaper_mcp/: __init__.py  ipc.py  rmid.py  rmid_test.py  server.py
